--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ section.corpo-site
   height: 2080px;
   margin:10px;
   padding: 20px;
-  background-image: url('/eu\ teste.png');
+  background-image: url('/eu.png');
   background-size: auto;
   background-repeat: no-repeat;
   background-size: 100vw;
