--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ header nav li a:hover {
 section.corpo-site
 {
   width: auto;
-  height: 2080px;
+  height: 150vw;
   margin:10px;
   padding: 20px;
   background-image: url('./eu.png');
@@ -95,7 +95,7 @@ color: #007BFF;
   font-family: 'Poppins', sans-serif;
   color: white; /* Letra clara */
   padding: 10px 20px;
-  font-size: 16px;
+  
   background-color: rgba(252, 252, 252, 0.363); /* Fundo preto */
   
   border: none;
