--- a/index1.css
+++ b/index1.css
@@ -55,13 +55,8 @@ main{
 
 
 }
-section.corpo-site
-{
-  width: auto;
-  height: 580px;
-  margin-top: 10px;
-  display: inline-block;
-}
+
+
 .container {
     display: flex;
     justify-content: space-between;
@@ -141,11 +136,10 @@ font-size: 1.7vw;
 
 .right{
   position: relative;
-  top: 1vw;
-  width: 18%;
-  right: 16%;
+  
   background-color: #eeeee0;
   padding: 15px;
+  
   
 }
 .right h2{
@@ -181,9 +175,10 @@ body {
 section>.left-sercom {
     text-align: left;
     position: relative;
-    top: 8vw;
-    left: 6%;
-    width: 58vw;
+    top: 4vw;
+    left: 7%;
+    width: 56vw;
+    
     background-color: #eeeee0;
     color: #000000;
     font-family: 'Alegreya', serif;
@@ -205,7 +200,9 @@ section>.left-sercom p{
 .right-sercom {
     text-align: left;
     position: relative;
-    top: 5vw;
+    top: -29vw;
+    width: 17vw;
+    left: 64vw;
     background-color: #eeeee0;
     padding: 15px;
     color: #000000;
@@ -335,10 +332,10 @@ font-size: 1.7vw;
 .phone-number {
   margin: 0;
 }
-.download-btn
-  {
-font-size: 3vw;
-position: relative;
-top: 3vw;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
+  
