--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
 }
 
-
 body {
   background-color: rgb(5, 5, 5);
   height: 100vh;
@@ -24,7 +23,7 @@ header > .interface {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 header a {
@@ -43,46 +42,40 @@ header nav li {
 
 /* Efeito de hover nos links de navegação */
 header nav li a:hover {
-  color: #007BFF;
+  color: #007bff;
 }
 
 /* TOPO DO SITE QUE TEM MEU ROSTO LINGO*/
-section.corpo-site
-{
+section.corpo-site {
   width: auto;
   height: 150vw;
-  margin:10px;
+  margin: 10px;
   padding: 20px;
-  background-image: url('./eu.png');
+  background-image: url("./eu.png");
   background-size: auto;
   background-repeat: no-repeat;
   background-size: 100vw;
-  
 }
-.texto{
+.texto {
   position: relative;
   width: 50vw;
   left: 20vw;
-  top:20vw;
-  
+  top: 20vw;
 }
-.texto h1{
+.texto h1 {
   color: aliceblue;
-  font-family: 'Poppins', sans-serif;
-    font-size: 4vw;
+  font-family: "Poppins", sans-serif;
+  font-size: 4vw;
   position: relative;
-   
 }
 .ponto {
-color: #007BFF;
+  color: #007bff;
 }
-.texto p{
+.texto p {
   color: aliceblue;
-  font-family: 'Poppins', sans-serif;
-   font-size: 1vw;
+  font-family: "Poppins", sans-serif;
+  font-size: 1vw;
   position: relative;
- 
-  
 }
 
 .footer {
@@ -90,7 +83,7 @@ color: #007BFF;
   padding: 20px;
   text-align: center;
   color: white; /* Cor do texto */
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .footer-content {
@@ -117,19 +110,17 @@ color: #007BFF;
 .phone-number {
   margin: 0;
 }
-.btns{
+.btns {
   position: relative;
-  display:  flex;
-  top:5vw;
+  display: flex;
+  top: 5vw;
   justify-content: space-between;
-  
 }
-.download-btn
-  {
+.download-btn {
   font-size: 2vw;
   position: relative;
-  text-align:  center;
-  font-family: 'Poppins', sans-serif;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
   color: white; /* Letra clara */
   padding: 10px 20px;
   background-color: rgba(252, 252, 252, 0.363); /* Fundo preto */
@@ -138,18 +129,18 @@ color: #007BFF;
   transition: background-color 0.3s ease; /* Suaviza a transição do hover */
 }
 .download-btn:hover {
-  background-color: #007bffa1 ; /* Leve tom azul no hover */
+  background-color: #007bffa1; /* Leve tom azul no hover */
   color: white; /* Mantém o texto claro no hover */
 }
 .btn-link {
   font-size: 2vw;
   position: relative;
-  text-align:  center;
-  font-family: 'Poppins', sans-serif;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
   color: white; /* Letra clara */
   padding: 10px 20px;
   background-color: rgba(252, 252, 252, 0.363); /* Fundo preto */
-   border: none;
+  border: none;
   border-radius: 5px;
   text-decoration: none;
   display: inline-block;
@@ -157,54 +148,96 @@ color: #007BFF;
 }
 
 .btn-link:hover {
-  background-color: #007bffa1 ; /* Leve tom azul no hover */
+  background-color: #007bffa1; /* Leve tom azul no hover */
   color: white; /* Mantém o texto claro no hover */
 }
-@media (max-width: 768px)  {
- 
- .btns{
-  position: relative;
-  display:  flex;
-  top:5vw;
-  justify-content: space-between;
-  
-}
- .download-btn
-  {
+@media (max-width: 768px) {
+  .texto h1 {
+    font-size: 5vw;
+  }
+  .texto p {
+    font-size: 3vw;
+  }
+  .btns {
+    position: relative;
+    display: flex;
+    top: 5vw;
+    justify-content: space-between;
+  }
+  .download-btn {
+    font-size: 2vw;
+    position: relative;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    color: white; /* Letra clara */
+    padding: 5px;
+    background-color: rgba(252, 252, 252, 0.363); /* Fundo preto */
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease; /* Suaviza a transição do hover */
+  }
+  .download-btn:hover {
+    background-color: #007bff85; /* Leve tom azul no hover */
+    color: white; /* Mantém o texto claro no hover */
+  }
+  .btn-link {
+    font-size: 2vw;
+    position: relative;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    color: white; /* Letra clara */
+    padding: 5px;
+    background-color: rgba(252, 252, 252, 0.363); /* Fundo preto */
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    display: inline-block;
+    transition: background-color 0.3s ease; /* Suaviza a transição do hover */
+  }
 
-  
-  font-size: 2vw;
-  position: relative;
-  text-align:  center;
-  font-family: 'Poppins', sans-serif;
-  color: white; /* Letra clara */
-  padding: 5px ;
-  background-color: rgba(252, 252, 252, 0.363); /* Fundo preto */
-  border-radius: 5px;
-  text-decoration: none;
-  transition: background-color 0.3s ease; /* Suaviza a transição do hover */
+  .btn-link:hover {
+    background-color: #007bffa1; /* Leve tom azul no hover */
+    color: white; /* Mantém o texto claro no hover */
+  }
 }
-.download-btn:hover {
-  background-color: #007bffa1 ; /* Leve tom azul no hover */
-  color: white; /* Mantém o texto claro no hover */
-}
-.btn-link {
-  font-size: 2vw;
-  position: relative;
-  text-align:  center;
-  font-family: 'Poppins', sans-serif;
-  color: white; /* Letra clara */
+.menu-toggle {
+  display: none;
+  background-color: #0057b36c;
+  color: rgba(255, 255, 255, 0.418);
+  font-size: 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10%;
   padding: 5px;
-  background-color: rgba(252, 252, 252, 0.363); /* Fundo preto */
-   border: none;
-  border-radius: 5px;
-  text-decoration: none;
-  display: inline-block;
-  transition: background-color 0.3s ease; /* Suaviza a transição do hover */
 }
 
-.btn-link:hover {
-  background-color: #007bffa1 ; /* Leve tom azul no hover */
-  color: white; /* Mantém o texto claro no hover */
-}
+/* Esconder o menu por padrão no mobile */
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+  }
+
+  #navMenu {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: #0057b362;
+  }
+
+  #navMenu ul {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    margin: 0;
+  }
+
+  #navMenu ul li {
+    margin: 10px 0;
+    text-align: center;
+  }
+
+  /* Mostrar o menu quando a classe "active" for adicionada */
+  #navMenu.active {
+    display: flex;
+  }
 }
